@@ -1,3 +1,8 @@
+2011-08-28  Per Bothner  <per@bothner.com>
+
+	* CompileReflect.java (inlineClassName): Don't inline if
+	checkKnownClass returns -1.
+
 2011-08-17  Per Bothner  <per@bothner.com>
 
 	* CompileBuildObject.java (make): Use Compilation#lookup as it is
